--- a/main.html
+++ b/main.html
@@ -7,7 +7,15 @@
         <div class="container">
             <div class="top">
                 <div class="photo"></div>
-                
+                <div class="bio">
+                    <div class="line1">Страховой агент</div>
+                    <div class="line2">Наталья Кулиненко</div>
+                    <div class="line3">Личный номер сотрудника Белгосстраха: 7321</div>
+                    <div class="line4"><a href="http://bgs.by/" class="line4">сайт компании</a></div>
+                </div>
+                <div class="logo">
+                    <img src="logo.jpg" width="320px"/>
+                </div>
             </div>
             <div class="menu">
                     <div class="menu_point">
