quote + new header configuration

--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
                 <div class="bio">
                     <div class="line1">Страховой агент</div>
                     <div class="line2">Наталья Кулиненко</div>
-                    <div class="line3">Личный номер сотрудника Белгосстраха: 7321</div>
-                    <div class="line4"><a href="http://bgs.by/" class="line4">сайт компании</a></div>
+                    
                 </div>
                 <div class="logo">
-                    <img src="logo.jpg" width="320px"/>
+                    <a href="http://bgs.by/"><img src="logo.jpg" width="320px"/></a>
+                    <div class="line3">Личный номер сотрудника Белгосстраха: 7321</div>
                 </div>
             </div>
             <div class="menu">
@@ -28,7 +28,7 @@
                         <input type ="image" src="down.svg" class="down" id="down" onclick="show_contacts()"/>
                     </div>
                     <div class="menu_point">
-                        <span class="point">ПРАЙСЛИСТ</span>
+                        <span class="point">ЦЕНЫ</span>
                         <input type ="image" src="down.svg" class="down"/>
                     </div>
                     <div class="menu_point">
@@ -44,6 +44,12 @@
                 <div class="contact"><img src="viber.svg" class="contact_icon"/></div>
                 <div class="contact"><img src="odnoklassniki.svg" class="contact_icon"/></div>
                 <div class="contact"><img src="skype.svg" class="contact_icon"/></div>
+            </div>
+            <div class="basic" id="basic">
+                <div class="quote">
+                    <div class="words">«Полное спокойствие может дать человеку только страховой полис.»</div>
+                    <div class="author">Остап Бендер</div>
+                </div>
             </div>
         </div>
     </body>
