basic info without icons

--- a/main.html
+++ b/main.html
@@ -49,6 +49,28 @@
                 <div class="quote">
                     <div class="words">«Полное спокойствие может дать человеку только страховой полис.»</div>
                     <div class="author">Остап Бендер</div>
+                    <div class="line">На страхование принимаются:</div>
+                </div>
+                <div class="basic_info">
+                    <div class="info_col">
+                        <div class="info_line">Квартиры</div>
+                        <div class="info_line">Жилые дома</div>
+                        <div class="info_line">Садовые домики</div>
+                        <div class="info_line">Дачи</div>
+                        <div class="info_line">Хозяйственные постройки</div>
+                    </div>
+                    <div class="info_col">
+                        <div class="info_line">Легковые транспортные средства</div>
+                        <div class="info_line">Велосипеды</div>
+                        <div class="info_line">Ноутбуки</div>
+                        <div class="info_line">Телефоны</div>
+                        <div class="info_line">Домашнее имущество</div>
+                    </div>
+                    <div class="info_col">
+                        <div class="info_line">Здоровье</div>
+                        <div class="info_line">Здоровье за границей</div>
+                        <div class="info_line">Породистые животные</div>
+                    </div>
                 </div>
             </div>
         </div>
