basic page ready

--- a/main.html
+++ b/main.html
@@ -53,23 +53,23 @@
                 </div>
                 <div class="basic_info">
                     <div class="info_col">
-                        <div class="info_line">Квартиры</div>
-                        <div class="info_line">Жилые дома</div>
-                        <div class="info_line">Садовые домики</div>
-                        <div class="info_line">Дачи</div>
-                        <div class="info_line">Хозяйственные постройки</div>
+                        <div class="info_line"><img src="flat.svg" class="info_icon"/><div>Квартиры</div></div>
+                        <div class="info_line"><img src="house.svg" class="info_icon"/><div>Жилые дома</div></div>
+                        <div class="info_line"><img src="garden_house.svg" class="info_icon"/><div>Садовые домики</div></div>
+                        <div class="info_line"><img src="dacha.svg" class="info_icon"/><div>Дачи</div></div>
+                        <div class="info_line"><img src="outbuilding.svg" class="info_icon"/><div>Хозяйственные постройки</div></div>
                     </div>
                     <div class="info_col">
-                        <div class="info_line">Легковые транспортные средства</div>
-                        <div class="info_line">Велосипеды</div>
-                        <div class="info_line">Ноутбуки</div>
-                        <div class="info_line">Телефоны</div>
-                        <div class="info_line">Домашнее имущество</div>
+                        <div class="info_line"><img src="car.svg" class="info_icon"/><div>Легковые транспортные средства</div></div>
+                        <div class="info_line"><img src="bicycle.svg" class="info_icon"/><div>Велосипеды</div></div>
+                        <div class="info_line"><img src="laptop.svg" class="info_icon"/><div>Ноутбуки</div></div>
+                        <div class="info_line"><img src="phone.svg" class="info_icon"/><div>Телефоны</div></div>
+                        <div class="info_line"><img src="domestic.svg" class="info_icon"/><div>Домашнее имущество</div></div>
                     </div>
                     <div class="info_col">
-                        <div class="info_line">Здоровье</div>
-                        <div class="info_line">Здоровье за границей</div>
-                        <div class="info_line">Породистые животные</div>
+                        <div class="info_line"><img src="health.svg" class="info_icon"/><div>Здоровье</div></div>
+                        <div class="info_line"><img src="health.svg" class="info_icon"/><div>Здоровье за границей</div></div>
+                        <div class="info_line"><img src="animal.svg" class="info_icon"/><div>Породистые животные</div></div>
                     </div>
                 </div>
             </div>
