--- a/main.html
+++ b/main.html
@@ -72,6 +72,50 @@
                         <div class="info_line"><img src="animal.svg" class="info_icon"/><div>Породистые животные</div></div>
                     </div>
                 </div>
+                <div class="transport_block">
+                    <div class="transport_caption">
+                        Страхование транспортных средств
+                    </div>
+                    <div class="transport_info_lines">
+                        <div class="transport_info_line">
+                            <span>Обязательное страхование гражданской ответственности владельцев транспортных средств <span>(ОСГО ВТС)</span></span> - страховое возмещение
+                            выплачивается <span>потерпевшему в ДТП.</span> Виновник несет расходы на восстановление своего автомобиля самостоятельно.
+                        </div>
+                        <div class="transport_info_line">
+                            <span>Комплексное страхование гражданской ответственности владельцев транспортных средств <span>(Комплексное страхование)</span></span> - страховое возмещение
+                            выплачивается <span>и потерпевшему и виновнику в ДТП.</span>
+                        </div>
+                        <div class="transport_info_line">
+                            <span>Добровольное страхование наземных транспортных средств <span>(АВТОКАСКО)</span></span> - страховое возмещение
+                            выплачивается только <span>владельцу</span> застрахованного автомобиля вне зависимости от вины. Наличие АВТОКАСКО не освобождает от
+                            заключения договора ОСГО ВТС.
+                        </div>
+                    </div>
+                    <div class="transport_info_lists">
+                        <div class="transport_info_list">
+                            <div class="transport_info_list_top">АВТОКАСКО</div>
+                            <div class="transport_info_list_item"> + в случае ДТП выплата производится виновнику</div>
+                            <div class="transport_info_list_item"> + возможность оплаты взноса в рассрочку (два этапа)</div>
+                            <div class="transport_info_list_item"> + утрата или повреждение траспортного средства в иных случаях, кроме ДТП (стихийных бедствий и тп)</div>
+                            <div class="transport_info_list_item"> + угон, хищение траспортного средства</div>
+                            <div class="transport_info_list_item"> + неправомерные действия третьих лиц</div>
+                            <div class="transport_info_list_item"> + возможность выплаты страхового возмещения без учета износа подлежащих замене деталей</div>
+                            <div class="transport_info_list_item"> + необходимость дополнительного заключения договора ОСГО ВТС</div>
+                            
+                        </div>
+                        <div class="transport_info_list">
+                            <div class="transport_info_list_top">Комплексное страхование</div>
+                            <div class="transport_info_list_item"> + в случае ДТП выплата производится потерпевшим</div>
+                            <div class="transport_info_list_item"> + в случае ДТП выплата производится виновнику</div>
+                            <div class="transport_info_list_item"> + возможность оплаты взноса в рассрочку (два этапа)</div>
+                        </div>
+                        <div class="transport_info_list">
+                            <div class="transport_info_list_top">ОСГО ВТС</div>
+                            <div class="transport_info_list_item"> + в случае ДТП выплата производится потерпевшим</div>
+                            <div class="transport_info_list_item"> + возможность оплаты взноса в рассрочку (два этапа)</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
