tech block started

--- a/main.html
+++ b/main.html
@@ -120,6 +120,9 @@
                     </div>
                 </div>
             </div>
+            <div class="tech_assistance_block">
+                <div class="tech_as_caption">Технический ассистанс</div>
+            </div>
         </div>
     </body>
 </html>
