hello there, i'm alive

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="menu_point">
                         <span class="point">ОТЗЫВЫ</span>
-                        <input type ="image" src="down.svg" class="down"/>
+                        <a href="#comments"><input type ="image" src="down.svg" class="down"/></a>
                     </div>
             </div>
             <div class="invisible" id="contacts">
@@ -122,7 +122,227 @@
             </div>
             <div class="tech_assistance_block">
                 <div class="tech_as_caption">Технический ассистанс</div>
+                    <div class="tech_info_line">
+                        Опасаетесь непредвиденной поломки автомобиля? Возьмите в дорогу <span style="font-weight: bold;"> полис добровольного
+                        страхования расходов, связанных с эксплуатацией транспортных средств (технический ассистанс).</span>
+                    </div>
+                <div class="split_line"> На территории Республики Беларусь - вариант "СТАНДАРТ"</div>
+                <div class="tech_paragraph">
+                    <div class="tech_paragraph_text">
+                        <div class="tech_paragraph_text_line"><span style="font-style: italic; font-weight: bold;">Вам возместят расходы на оказание услуг:</span></div>
+                        <div class="tech_paragraph_text_line"> + по устранению поломки на месте ДТП или технической аварии (замена, подкачка колеса; буксировка автомобиля; подвоз топлива)</div>
+                        <div class="tech_paragraph_text_line">+ по эвакуации транспортного средства до ближайшего месте ремонта (стоянки, хранения)</div>
+                    </div>
+                    <button type="button" class="apply-tech">Подать заявку</button>
+                </div>
+                <div class="split_line"> За пределами Республики Беларусь - варианты "Европейский" и "Европа (мини)"</div>
+                <div class="tech_paragraph_columns">
+                    <div class="tech_paragraph_column">
+                        <div class="tech_paragraph_text">
+                            <div class="tech_paragraph_text_line"><span style="font-style: italic;">"Европейский" - действует на территории большинства европейских стран и в Российской Федерации
+                            (полный список стран указан в Правилах страхования)</span></div>
+                            <div class="tech_paragraph_text_line"><span style="font-style: italic; font-weight: bold;">Вам возместят расходы на оказание услуг:</span></div>
+                            <div class="tech_paragraph_text_line"> + по вызову технического специалиста непосредственно на место аварии или ДТП для устранения поломки</div>
+                            <div class="tech_paragraph_text_line">+ по эвакуации транспортного средства до ближайшего месте ремонта (стоянки, хранения)</div>
+                            <div class="tech_paragraph_text_line">+ по организации предоставления аналогичного по характеристикам автомобиля на время ремонта поврежденного авто</div>
+                            <div class="tech_paragraph_text_line">+ по организации размещения водителя и/или лиц, следующих с ним, в гостинице</div>
+                        </div>
+                        <button type="button" class="apply-tech">Подать заявку</button>
+                    </div>
+                    <div class="tech_paragraph_column">
+                        <div class="tech_paragraph_text">
+                            <div class="tech_paragraph_text_line"><span style="font-style: italic;">"Европа (мини)" - действует на территории большинства европейских стран и в Российской Федерации
+                            (полный список стран указан в Правилах страхования)</span></div>
+                            <div class="tech_paragraph_text_line"><span style="font-style: italic; font-weight: bold;">Вам возместят расходы на оказание услуг:</span></div>
+                            <div class="tech_paragraph_text_line"> + по вызову технического специалиста непосредственно на место аварии или ДТП для устранения поломки</div>
+                            <div class="tech_paragraph_text_line">+ по эвакуации транспортного средства до ближайшего месте ремонта (стоянки, хранения)</div>
+                        </div>
+                        <button type="button" class="apply-tech">Подать заявку</button>
+                    </div>
+                </div>
+                <div class="split_line"> За пределами Республики Беларусь и на территории Республики Беларусь - "ЕвроСтандарт"</div>
+                <div class="tech_paragraph">
+                    <div class="tech_paragraph_text">
+                        <div class="tech_paragraph_text_line"><span style="font-style: italic;">"ЕвроСтандарт" - действует на территории Республики Беларусь, большинства европейских стран и в Российской Федерации
+                            (полный список стран указан в Правилах страхования)</span></div>
+                        <div class="tech_paragraph_text_line"><span style="font-style: italic; font-weight: bold;">Вам возместят расходы на оказание услуг:</span></div>
+                        <div class="tech_paragraph_text_line">+ по вызову технического специалиста непосредственно на место аварии или ДТП для устранения поломки</div>
+                        <div class="tech_paragraph_text_line">+ по эвакуации транспортного средства до ближайшего месте ремонта (стоянки, хранения)</div>
+                        <div class="tech_paragraph_text_line">+ по организации предоставления аналогичного по характеристикам автомобиля на время ремонта поврежденного авто
+                            или организации размещения водителя в гостинице
+                        </div>
+                    </div>
+                    <button type="button" class="apply-tech">Подать заявку</button>
+                </div>
             </div>
-        </div>
+            <div class="domestic_property_block">
+                <div class="domestic_caption">Имущественное страхование</div>
+                <div class="domestic_info">
+                    <div class="domestic_info_caption">Комплексное страхование квартиры</div>
+                    <div class="domestic_info_block">
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">Вы обеспечите страховой защитой:</div>
+                            <div class="domestic_info_line">+ квартиру(конструктивные элементы отделки, установленное внутри оборудование)</div>
+                            <div class="domestic_info_line">+ домашнее имущество</div>
+                            <div class="domestic_info_line">+ гражданскую ответственность любого пользователя квартирой за вред, причиненный соседям</div>
+                        </div>
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">От чего будет застрахована ваша квартира?</div>
+                            <div class="domestic_info_line">от аварии отопительной системы, водопроводных и канализационных сетей</div>
+                            <div class="domestic_info_line">от пожара, взрыва, проникновения воды из соседних помещений</div>
+                            <div class="domestic_info_line">от неправомерных действий 3-их лиц</div>
+                            <div class="domestic_info_line">от стихийных бедствий </div>
+                        </div>
+                        <button type="button" class="apply-domestic">Подать заявку</button>
+                    </div>
+                    <div class="domestic_info_caption">Страхование жилых домов и коттеджей</div>
+                    <div class="domestic_info_block">
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">Что может быть застраховано?</div>
+                            <div class="domestic_info_line">+ коттедж, садовый домик, дача</div>
+                            <div class="domestic_info_line">+ Хозяйственные постройки, баня, гараж</div>
+                            <div class="domestic_info_line">+ забор, ворота, калитки</div>
+                        </div>
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">Ущерб возмещается в случае:</div>
+                            <div class="domestic_info_line">стихийных бедствий (сильный ветер, град и т.д.)</div>
+                            <div class="domestic_info_line">несчастных случаев (пожар, взрыв, падение деревьев, авария отопительной системы, водопроводных и канализационных сетей)</div>
+                            <div class="domestic_info_line">неправомерных действий 3-их лиц</div>
+                        </div>
+                        <button type="button" class="apply-domestic">Подать заявку</button>
+                    </div>
+                    <div class="domestic_info_caption">Страхование домовладений</div>
+                    <div class="domestic_info_block">
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">Вы обеспечите страховой защитой:</div>
+                            <div class="domestic_info_line">+ жилой дом или дачу</div>
+                            <div class="domestic_info_line">+ установленное оборудование (газовое, электрическое, сантехническое)</div>
+                            <div class="domestic_info_line">+ инженерные коммуникации внутри строений</div>
+                            <div class="domestic_info_line">+ домашнее имущество</div>
+                        </div>
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">Страховые риски:</div>
+                            <div class="domestic_info_line">стихийные бедствия (сильный ветер, град и т.д.)</div>
+                            <div class="domestic_info_line">пожар, взрыв, падение деревьев, авария отопительной системы, водопроводных и канализационных сетей</div>
+                            <div class="domestic_info_line">неправомерные действия 3-их лиц</div>
+                            <div class="domestic_info_line">выход из строя электротехники в результате перенапржения в сети</div>
+                            <div class="domestic_info_line">ответственность за вред, причиненный потерпевшим</div>
+                        </div>
+                        <button type="button" class="apply-domestic">Подать заявку</button>
+                    </div>
+                    <div class="domestic_info_caption">Страхование животных</div>
+                    <div class="domestic_info_block">
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">На страхование принимаются:</div>
+                            <div class="domestic_info_line">+ породистые кошки и собаки</div>
+                            <div class="domestic_info_line">+ крупный рогатый скот, лошади</div>
+                            <div class="domestic_info_line">+ свиньи, овцы и козы</div>
+                            <div class="domestic_info_line">+ семьи пчел и другие породистые, племенные животные</div>
+                            <div class="domestic_info_line">+ ответственность за вред, причиненный потерпевшему в результате агрессивного или непредвиденного поведения животного</div>
+                        </div>
+                        <div class="domestic_info_list">
+                            <div class="domestic_info_line" style="font-weight: bold;">Мы возместим ущерб в случае:</div>
+                            <div class="domestic_info_line">утраты (гибели) породистых животных, осуществления расходов на ветеринарное обслуживание</div>
+                            <div class="domestic_info_line">утраты (гибели), вынужденного убоя, уничтожения сельскохозяйственных животных</div>
+                            <div class="domestic_info_line">причинения животным вреда жизни, здоровью, имуществу потерпевшего</div>
+                            
+                        </div>
+                        <button type="button" class="apply-domestic">Подать заявку</button>
+                    </div>
+                </div>
+            </div>
+            <div class="healthcare-block">
+                <div class="healthcare_caption">Добровольное страхование от несчастных случаев и заболеваний</div>
+                <div class="healthcare_info_lines">
+                    <div class="healthcare_info_line">Хотите жить уверенно? Заключите <span style="font-weight: bold;">договор страхования от несчастных случаев и заболеваний</span> для всей семьи.</div>
+                    <div class="healthcare_info_line"><span style="font-weight: bold;">К страховым случаям относятся</span> травмы, потребовавшие лечения: переломы, ожоги,
+                    оморожения, случайные острые отравления, отравления лекарствами, грибами и другие несчастные случаи.</div>
+                    <div class="healthcare_info_line"><span style="font-weight: bold;">При покупке семейного полиса действует скидка - 20%</span></div>
+                </div>
+                <div class="health_table_block">
+                    <table class="health_table">
+                        <tr class="tab_header"><td colspan="3">ВАРИАНТ СТРАХОВАНИЯ / СТРАХОВОЙ РИСК</td><td>Страховой взнос в год, рублей</td></tr>
+                        <tr>
+                            <td class="col1">КАНИКУЛЫ</td>
+                            <td>Учащиеся и студенты дневной формы обучения на время официальных каникул</td>
+                            <td>несчастные случаи</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">МАЛЫШ</td>
+                            <td rowspan="2">Для детей от 0 до 5 лет включительно</td>
+                            <td>несчастные случаи</td>
+                            <td>14</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">МАЛЫШ+</td>
+                            <td>несчастные случаи и заболевания</td>
+                            <td>32</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">ШКОЛЬНИК</td>
+                            <td rowspan="2">Для детей от 6 до 18 лет включительно</td>
+                            <td>несчастные случаи</td>
+                            <td>16</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">ШКОЛЬНИК+</td>
+                            <td>несчастные случаи и заболевания</td>
+                            <td>36</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">СПОРТ-ПРОФИ</td>
+                            <td rowspan="2">Для лиц, регулярно занимающихся спортом и участвующих в спортивных соревнованиях, спортсменов</td>
+                            <td>несчастные случаи</td>
+                            <td>от 36</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">СПОРТ-ПРОФИ+</td>
+                            <td>несчастные случаи и заболевания (при повышенном тарифе)</td>
+                            <td>от 54</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">СТАНДАРТ</td>
+                            <td rowspan="2">Лица от 19 лет и выше</td>
+                            <td>несчастные случаи</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <td class="col1">СТАНДАРТ+</td>
+                            <td>несчастные случаи и заболевания</td>
+                            <td>40</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="comments"><a name="comments"></a>
+                <div class="form_section">
+                    <form action="" method="post">
+                        <label for="author">Укажите ваш e-mail, чтобы оставить отзыв или задать вопрос</label>
+                        <input type="email" name="author"/>
+                        <input type="text" name="message"/>
+                        <button type="submit">Отправить</button>
+                    </form>
+                </div>
+
+                <div id="history">
+                    {% for message in latest_messages %}
+                        <div>
+                        <div>
+                            <strong>
+                                {{ message.author }}
+                            </strong>
+                            <br/>
+                            <em>
+                                {{ message.pub_date|date:'Y-m-d H:i:s' }}
+                            </em>
+                            <br/>
+                            {{ message.message }}
+                        </div>
+                        </div>
+                        <br/>
+                    {% endfor %}
+                </div>
+            </div>
     </body>
 </html>
