price+comments left

--- a/main.html
+++ b/main.html
@@ -315,6 +315,9 @@
                     </table>
                 </div>
             </div>
+            <div class="pricelist">
+                
+            </div>
             <div class="comments"><a name="comments"></a>
                 <div class="form_section">
                     <form action="" method="post">
