look who is back from the dead

--- a/main.html
+++ b/main.html
@@ -315,8 +315,108 @@
                     </table>
                 </div>
             </div>
-            <div class="pricelist">
-                
+            <div class="pricelist_block">
+                <div class="pricelist_caption">ЦЕНЫ</div>
+                <div class="price_section">
+                    <div class="section_row1">
+                        <div class="section_caption">Примерная стоимость годового договора страхования для нового автомобиля</div>
+                        <table>
+                            <tr>
+                                <td>Варианты страхования</td>
+                                <td>Стоимость</td>
+                            </tr>
+                            <tr>
+                                <td>ОСГО ВТС</td>
+                                <td>35,40 евро</td>
+                            </tr>
+                            <tr>
+                                <td>Комплексное страхование</td>
+                                <td>165,60 евро</td>
+                            </tr>
+                            <tr>
+                                <td>АВТОКАСКО</td>
+                                <td>430 евро + ОСГО ВТС</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="section_row1">
+                        <div class="section_caption">Стоимость технического ассистанса для автомобилей, зарегистрированных в РБ</div>
+                        <table>
+                            <tr>
+                                <td rowspan="2">Вариант страхования</td>
+                                <td rowspan="2">Страховая сумма, евро</td>
+                                <td colspan="7">Срок действия договора страхования</td>
+                            </tr>
+                            <tr>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">3-6 дней</span></td>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">15 дней</span></td>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">1 мес.</span></td>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">2 мес.</span></td>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">3 мес.</span></td>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">6 мес.</span></td>
+                                <td><span style="writing-mode: vertical-lr; transform: rotate(180deg);">1 год</span></td>
+                            </tr>
+                            <tr>
+                                <td>Стандарт</td>
+                                <td>1000</td>
+                                <td>-</td>
+                                <td>5</td>
+                                <td>9</td>
+                                <td>16</td>
+                                <td>23</td>
+                                <td>36</td>
+                                <td>50</td>
+                            </tr>
+                            <tr>
+                                <td>Европейский</td>
+                                <td>3000</td>
+                                <td>8</td>
+                                <td>20</td>
+                                <td>39</td>
+                                <td>49</td>
+                                <td>68</td>
+                                <td>109</td>
+                                <td>150</td>
+                            </tr>
+                            <tr>
+                                <td>Европа (мини)</td>
+                                <td>1000</td>
+                                <td>3</td>
+                                <td>6</td>
+                                <td>9</td>
+                                <td>16</td>
+                                <td>23</td>
+                                <td>36</td>
+                                <td>50</td>
+                            </tr>
+                            <tr>
+                                <td>ЕвроСтандарт</td>
+                                <td>3000</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>118</td>
+                                <td>163</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="price_section">
+                    <div class="section_row2">
+                        <div class="section_caption">Стоимость комплексного страхования квартиры</div>
+                    </div>
+                    <div class="section_row2">
+                        <div class="section_caption">Стоимость страхования жилых домов и коттеджей</div>
+                    </div>
+                    <div class="section_row2">
+                        <div class="section_caption">Стоимость страхования домовладения</div>
+                    </div>
+                    <div class="section_row2">
+                        <div class="section_caption">Стоимость страхования животных</div>
+                    </div>
+                </div>
             </div>
             <div class="comments"><a name="comments"></a>
                 <div class="form_section">
